Add telemetry hardening and ordered operator guides