@@ -26,10 +26,12 @@ import io.github.marianciuc.streamingservice.subscription.entity.SubscriptionSta
 import io.github.marianciuc.streamingservice.subscription.entity.UserSubscriptions;
 import io.github.marianciuc.streamingservice.subscription.service.impl.UserSubscriptionServiceImpl;
 import lombok.SneakyThrows;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
 
+import java.io.IOException;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.UUID;
@@ -45,17 +47,44 @@ public class FetchActiveSubscriptionsJobTest {
         UserSubscriptionServiceImpl service = mock(UserSubscriptionServiceImpl.class);
         FetchActiveSubscriptionsJob aSJob = new FetchActiveSubscriptionsJob(service);
 
+        UserSubscriptions pendingRenewal = new UserSubscriptions();
         UserSubscriptions sub1 = new UserSubscriptions();
         UserSubscriptions sub2 = new UserSubscriptions();
+        pendingRenewal.setId(UUID.randomUUID());
         sub1.setId(UUID.randomUUID());
         sub2.setId(UUID.randomUUID());
 
-        when(service.getAllUserSubscriptionsByStatusAndEndDate(any(), any())).thenReturn(Arrays.asList(sub1, sub2));
+        when(service.getRenewalsReadyToFinalize()).thenReturn(java.util.List.of(pendingRenewal));
+        when(service.getAllUserSubscriptionsByStatusEndingOnOrBefore(any(), any())).thenReturn(Arrays.asList(sub1, sub2));
 
         aSJob.execute(jobExecutionContext);
 
+        verify(service, times(1)).extendSubscription(pendingRenewal);
         verify(service, times(1)).extendSubscription(sub1);
         verify(service, times(1)).extendSubscription(sub2);
-        verify(service, times(1)).getAllUserSubscriptionsByStatusAndEndDate(SubscriptionStatus.ACTIVE, LocalDate.now());
+        verify(service, times(1)).getRenewalsReadyToFinalize();
+        verify(service, times(1)).getAllUserSubscriptionsByStatusEndingOnOrBefore(SubscriptionStatus.ACTIVE, LocalDate.now());
+    }
+
+    @SneakyThrows
+    @Test
+    public void testExecuteContinuesAfterExtensionFailure() {
+        JobExecutionContext jobExecutionContext = mock(JobExecutionContext.class);
+        UserSubscriptionServiceImpl service = mock(UserSubscriptionServiceImpl.class);
+        FetchActiveSubscriptionsJob job = new FetchActiveSubscriptionsJob(service);
+
+        UserSubscriptions first = new UserSubscriptions();
+        UserSubscriptions second = new UserSubscriptions();
+        first.setId(UUID.randomUUID());
+        second.setId(UUID.randomUUID());
+
+        when(service.getRenewalsReadyToFinalize()).thenReturn(java.util.List.of());
+        when(service.getAllUserSubscriptionsByStatusEndingOnOrBefore(any(), any())).thenReturn(Arrays.asList(first, second));
+        doThrow(new IOException("boom")).when(service).extendSubscription(first);
+
+        Assertions.assertThrows(JobExecutionException.class, () -> job.execute(jobExecutionContext));
+
+        verify(service).extendSubscription(first);
+        verify(service).extendSubscription(second);
     }
 }
